--- a/_inc/css/wp-tiles.css
+++ b/_inc/css/wp-tiles.css
@@ -60,18 +60,18 @@ ul.template-selector li:hover {
 .wp-tile-container .grid .tile-bg {
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: center center;
   width: 100%;
   height: 100%;
   background-color: #282828;
 }
-/* line 68, ../scss/wp-tiles.scss */
+/* line 69, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-color {
   position: absolute;
   width: 100%;
   height: 100%;
 }
-/* line 74, ../scss/wp-tiles.scss */
+/* line 75, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-byline {
   position: absolute;
   left: 0;
@@ -81,7 +81,7 @@ ul.template-selector li:hover {
   background: rgba(0, 0, 0, 0.8);
   padding: 5px;
 }
-/* line 84, ../scss/wp-tiles.scss */
+/* line 85, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .title {
   font-size: 16px;
   font-weight: 600;
@@ -92,7 +92,7 @@ ul.template-selector li:hover {
   padding: 5px;
   padding-top: 2px;
 }
-/* line 95, ../scss/wp-tiles.scss */
+/* line 96, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .category {
   padding: 5px;
   font-size: 10px;
@@ -106,14 +106,14 @@ ul.template-selector li:hover {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-/* line 109, ../scss/wp-tiles.scss */
+/* line 110, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-text-only {
   background-color: transparent;
   width: 100%;
   height: 100%;
   opacity: 1;
 }
-/* line 116, ../scss/wp-tiles.scss */
+/* line 117, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-text-only .title {
   font-size: 24px;
   line-height: 1.15em;
@@ -122,7 +122,7 @@ ul.template-selector li:hover {
   width: 85%;
   height: 6.4em;
 }
-/* line 125, ../scss/wp-tiles.scss */
+/* line 126, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-text-only .category {
   color: #303030;
   font-style: normal;
