--- a/_inc/scss/wp-tiles.scss
+++ b/_inc/scss/wp-tiles.scss
@@ -93,7 +93,7 @@ ul.template-selector {
             padding-top: 2px;
         }
 
-        .category {
+        .extra {
             padding: 5px;
             font-size: 10px;
             font-weight: 600;
@@ -123,7 +123,7 @@ ul.template-selector {
                 height: 6.4em;
             }
 
-            .category {
+            .extra {
                 color: #303030;
                 font-style: normal;
                 font-size: 14px;
