--- a/assets/scss/_tile.scss
+++ b/assets/scss/_tile.scss
@@ -28,7 +28,7 @@
         }
     }
 
-    a {
+    body & a { // Added body to make sure this rule is important enough for most themes
         text-decoration: none;
     }
 }
